--- a/style.css
+++ b/style.css
@@ -9,7 +9,81 @@ html,
 body {
   scroll-behavior: smooth;
 }
+/* 基本 */
 
+h2:first-letter {
+  font-size: 1.5em;
+}
+.kiwi-maru {
+  font-family: "Kiwi Maru", serif;
+}
+/* ヘッダーのCSS */
 .main-head {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+/* フッターのCSS */
+.index-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.genre-posts {
+  border: 1px solid black;
+}
+
+.genre-title {
+  border-top: 1px solid gray;
+}
+
+/* トップページのやつ */
+h1 span {
+  display: inline-block;
+  font-family: "Kiwi Maru", serif;
+}
+.char1 {
+  transform: translateX(0px);
+}
+.char2 {
+  transform: translateY(20px);
+}
+.char3 {
+  transform: rotate(-23deg);
+}
+.char4 {
+  transform: translateY(-20px) rotate(-16deg);
+}
+.char5 {
+  transform: translateY(50px) rotate(-9deg);
+}
+.char6 {
+  transform: translateY(0px) rotate(-2deg);
+}
+.char7 {
+  transform: rotate(5deg);
+}
+.box {
+  width: 100px;
+  height: 100px;
+  background: #000;
+  animation: rotation 2s ease 0s 1 alternate none running;
+}
+
+@keyframes rotation {
+  0% {
+    transform: scale(0.3);
+  }
+
+  50% {
+    transform: scale(0.6) rotate(-45deg);
+    background: red;
+  }
+
+  100% {
+    transform: scale(1) rotate(180deg);
+    background: blue;
+  }
+}
+.top-blog-exp {
+  background-color: rgba(227, 227, 227, 0.8);
+  border-radius: 12px;
 }
