--- a/style.css
+++ b/style.css
@@ -8,8 +8,24 @@ Version : 1.0
 html,
 body {
   scroll-behavior: smooth;
+  background-color: #f9fafb;
+  color: #474747;
 }
 /* 基本 */
+a {
+  -webkit-transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+a:hover {
+  color: #1da1f2;
+  -webkit-transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
 
 h2:first-letter {
   font-size: 1.5em;
@@ -40,6 +56,9 @@ h1 span {
   display: inline-block;
   font-family: "Kiwi Maru", serif;
 }
+.norepeact {
+  white-space: nowrap;
+}
 .char1 {
   transform: translateX(0px);
 }
@@ -53,13 +72,13 @@ h1 span {
   transform: translateY(-20px) rotate(-16deg);
 }
 .char5 {
-  transform: translateY(50px) rotate(-9deg);
+  transform: translateX(-40px) translateY(30px) rotate(-9deg);
 }
 .char6 {
-  transform: translateY(0px) rotate(-2deg);
+  transform: translateX(-40px) translateY(20px) rotate(-2deg);
 }
 .char7 {
-  transform: rotate(5deg);
+  transform: translateX(-40px) translateY(10px) rotate(-8deg);
 }
 .box {
   width: 100px;
@@ -86,4 +105,154 @@ h1 span {
 .top-blog-exp {
   background-color: rgba(227, 227, 227, 0.8);
   border-radius: 12px;
+}
+/*Twitter*/
+.fa-twitter {
+  color: #1da1f2;
+}
+/*YouTube*/
+.fa-youtube {
+  color: #ff0000;
+}
+/*GitHub*/
+.fa-github {
+  color: #171515;
+}
+
+.circle-anime1 {
+  animation-name: circle-transition;
+  animation-duration: 6s;
+  animation-delay: 0.5s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+.circle-anime2 {
+  animation-name: circle-transition2;
+  animation-duration: 6s;
+  animation-delay: 1s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+@keyframes circle-transition {
+  0% {
+    transform: translateX(25vw);
+  }
+  100% {
+    transform: translateX(75vw);
+  }
+}
+@keyframes circle-transition2 {
+  0% {
+    transform: translateX(25vw);
+  }
+  100% {
+    transform: translateX(75vw);
+  }
+}
+.two-square {
+  position: relative;
+  padding-left: 25px;
+  /* border-bottom: 3px solid #0bd; */
+  /* color: #666; */
+  /* font-size: 23px; */
+  line-height: 32px;
+}
+
+.two-square:before {
+  position: absolute;
+  top: -8px;
+  left: 7px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  height: 12px;
+  width: 12px;
+  background: #8be0fe;
+  content: "";
+}
+
+.two-square:after {
+  position: absolute;
+  top: 8px;
+  left: 2px;
+  transform: rotate(15deg);
+  -webkit-transform: rotate(15deg);
+  height: 8px;
+  width: 8px;
+  background: #8be0fe;
+  content: "";
+}
+/* 記事カード */
+.article-card {
+  width: 300px !important;
+  position: relative;
+  padding: 35px 30px;
+}
+.article-card-arufa {
+  background: #fff9e7;
+  box-shadow: inset 0 0 30px rgba(230, 220, 190, 1);
+}
+.article-card:before {
+  content: " ";
+  display: block;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  border-width: 0 30px 30px 0;
+  border-style: solid;
+  width: 0;
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+.article-card-arufa:before {
+  background: #e8ddbd;
+  border-color: #fff #fff #e8ddbd #e8ddbd;
+}
+.article-card h1 {
+  font-size: 24px;
+  margin: 0 0 15px;
+  color: #603913;
+}
+
+.card-image img {
+  margin: 0 auto;
+  border-radius: 12px;
+}
+.card-border-tegaki {
+  /* セロハンテープに書いている風にしたい */
+  background-color: rgba(227, 227, 227, 0.4);
+  color: rgba(71, 71, 71, 0.6);
+  font-weight: bold;
+  text-shadow: 0 0 8px rgba(71, 71, 71, 0.5);
+  /* 貼ってる風に */
+  position: relative;
+  top: -50px;
+  left: 0px;
+  padding: 0.5em 1em;
+  /* 手書き風に */
+  border-radius: 10px 50px/50px 10px;
+  border: solid 2px #333;
+}
+.btn-motto {
+  padding: 1rem 4rem;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 0.5rem;
+  color: #000;
+  background-color: #fff100;
+  border-bottom: 5px solid #ccc100;
+}
+.btn-motto:hover {
+  margin-top: 3px;
+  color: #000;
+  background: #fff20a;
+  border-bottom: 2px solid #ccc100;
 }
