--- a/style.css
+++ b/style.css
@@ -26,8 +26,13 @@ a:hover {
   -o-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
 }
-
-h2:first-letter {
+h2 {
+  font-weight: bold;
+  font-size: 1.5em;
+  border-bottom: 1px solid black;
+  margin: 12px 0;
+}
+.start-large:first-letter {
   font-size: 1.5em;
 }
 .kiwi-maru {
@@ -234,6 +239,12 @@ h1 span {
   border-radius: 10px 50px/50px 10px;
   border: solid 2px #333;
 }
+.card-border-tegaki-for-single {
+  /* 手書き風に */
+  border-radius: 10px 50px/50px 10px;
+  border: solid 2px rgb(185, 185, 185);
+  color: white;
+}
 .btn-motto {
   padding: 1rem 4rem;
   cursor: pointer;
@@ -255,4 +266,34 @@ h1 span {
   color: #000;
   background: #fff20a;
   border-bottom: 2px solid #ccc100;
+}
+
+/* single.phpの設定 */
+/* 背景画像の白黒とぼかし */
+.blurBg {
+  background-size: cover;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  background-position: center;
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+.blurBg:before {
+  content: "";
+  background: inherit;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  z-index: -1;
 }
