--- a/style.css
+++ b/style.css
@@ -443,6 +443,7 @@ h1 span {
   margin: 0.25em;
   padding: 0.4em;
   font-size: 16px;
+  border-radius: 6px;
   padding-left: 0.5em;
   padding-right: 0.5em;
   border: 1px solid black;
