--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   scroll-behavior: smooth;
   background-color: #f9fafb;
   color: #474747;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 /* 記事のスタイル */
 
