feat sp用もくじ ただし、目次長過ぎるときの処理が不十分

--- a/blogMain.css
+++ b/blogMain.css
@@ -475,3 +475,118 @@ h1 span {
   background-color: black;
   color: white;
 }
+
+/*
+-----
+目次用  ここから
+-----
+*/
+.toc-card-wrapper {
+  /* ↓スクロール時ふんわり出現する設定を予め適応しなようにするためのopacity上書き */
+  opacity: 100 !important;
+  /*position: -webkit-sticky; /* Safari */
+  position: fixed;
+  bottom: 10px; /* 位置指定 */
+
+  display: flex;
+  justify-content: flex-start;
+  z-index: 2;
+  /* ↓下の要素をクリッカブルにするため */
+  pointer-events: none;
+}
+.toc-card-wrapper label {
+  cursor: pointer !important;
+  pointer-events: initial !important;
+}
+
+.toc-card {
+  margin-left: 6px;
+  background-color: #ffffff;
+  box-shadow: 3px 3px 10px rgb(0 0 0 / 16%);
+  padding: 10px;
+  pointer-events: initial;
+  overflow-y: scroll;
+}
+
+.toc-remover {
+  position: relative;
+  top: 18px;
+  right: -30px;
+  z-index: 3;
+  padding-right: 20px;
+}
+
+/*全体*/
+.toc-opener {
+  margin-right: 2em; /*前後の余白*/
+  padding: 0;
+}
+
+/*閉じたときの見た目*/
+
+.toc-opener input {
+  display: none;
+}
+
+.toc-open-button {
+  cursor: pointer;
+  /* 縦書き */
+  -ms-writing-mode: tb-rl;
+  writing-mode: vertical-rl;
+  /* 縦書きで左右中心 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: gray;
+  color: white;
+  width: 40px;
+  height: 150px;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  transition: 0.8s;
+}
+.toc-close-button {
+  display: none;
+  transition: 0.8s;
+}
+.toc-opener input:checked + label .toc-open-button {
+  left: -50px;
+  transition: 0.8s;
+}
+.toc-opener input:checked + label .toc-close-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 10px;
+  left: 40px;
+  z-index: 4;
+  transition: 0.8s;
+  background-color: #9ae6b4;
+  border-radius: 50%;
+}
+
+.toc-opener .toc-content {
+  width: 100vw;
+  height: 0;
+  padding: 0;
+  overflow: hidden;
+  transition: 0.8s;
+}
+.toc-opener input:checked ~ .toc-content {
+  width: 100vw;
+  height: 100%;
+  /* 目次長いときに上にはみ出すの防止 */
+  max-height: 100vh;
+  transition: 0.8s;
+  padding-bottom: 10px;
+}
+
+/* 
+-----
+目次用 ここまで
+-----
+*/
