--- a/blogMain.css
+++ b/blogMain.css
@@ -486,10 +486,10 @@ h1 span {
   opacity: 100 !important;
   /*position: -webkit-sticky; /* Safari */
   position: fixed;
-  bottom: 10px; /* 位置指定 */
+  bottom: 0px; /* 位置指定 */
 
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   z-index: 2;
   /* ↓下の要素をクリッカブルにするため */
   /* pointer-events: none; */
@@ -531,18 +531,20 @@ h1 span {
 .toc-open-button {
   cursor: pointer;
   /* 縦書き */
-  -ms-writing-mode: tb-rl;
-  writing-mode: vertical-rl;
+  /* -ms-writing-mode: tb-rl;
+  writing-mode: vertical-rl; */
   /* 縦書きで左右中心 */
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: gray;
+  opacity: 0.9;
   color: white;
-  width: 40px;
-  height: 150px;
+  width: 90px;
+  height: 40px;
+  border-radius: 10px 10px 0 0;
   position: absolute;
-  left: 0px;
+  left: 10px;
   bottom: 0px;
   transition: 0.8s;
 }
@@ -551,7 +553,7 @@ h1 span {
   transition: 0.8s;
 }
 .toc-opener input:checked + label .toc-open-button {
-  left: -50px;
+  left: -100px;
   transition: 0.8s;
 }
 .toc-opener input:checked + label .toc-close-button {
@@ -562,7 +564,7 @@ h1 span {
   height: 40px;
   position: absolute;
   top: 10px;
-  left: 0px;
+  left: 3px;
   z-index: 4;
   transition: 0.8s;
   background-color: #9ae6b4;
