--- a/blogMain.css
+++ b/blogMain.css
@@ -393,6 +393,8 @@ h1 span {
   height: 30vw; */
   width: 120px;
   height: 120px;
+  min-width: 120px;
+  min-heigh: 120px;
   object-fit: contain;
 }
 .card-border-tegaki {
